# PO-EQUIPO3-R1

./: Alumno.cpp  Alumno.h  CMakeLists.txt  FormatoHora.cpp  FormatoHora.h  Horario.cpp  Horario.h  Materia.cpp  Materia.h  Persona.cpp  Persona.h  Profesor.cpp  Profesor.h
